# intersects

packaging/: LICENSE  README.md  noxfile.py  pyproject.toml
packaging/docs/: conf.py  index.md
packaging/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
packaging/docs/_build/html/.doctrees/: environment.pickle  index.doctree  quickstart.doctree
packaging/docs/_build/html/_sources/: quickstart.md.txt
packaging/tests/: test_nox.py
software_design/: heat_flow.ipynb  heat_flow.py
